<resources
    xmlns:tools="http://schemas.android.com/tools">
    <string name="description">Media Controls</string>
    <string name="app_name">Topanimestream</string>
    <string name="app_name_login">TopAnimeStream</string>
    <string name="app_id" tools:ignore="MissingTranslation">43F674AF</string>
    <string name="urc" tools:ignore="MissingTranslation">Jgd7fFD63Ss</string>
    <string name="search_hint">Search</string>
    <string name="app_label">Topanimestream</string>
    <string name="topanimestream_website" tools:ignore="MissingTranslation">http://www.topanimestream.com/</string>
    <string name="odata_path" tools:ignore="MissingTranslation">http://www.topanimestream.com/odata/</string>
    <string name="api_path" tools:ignore="MissingTranslation">http://www.topanimestream.com/api/</string>
    <string name="image_host_path" tools:ignore="MissingTranslation">http://www.topanimestream.com/ImageHost/</string>
    <string name="sub_host_path" tools:ignore="MissingTranslation">http://www.topanimestream.com/SubHost/</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="action_settings">Settings</string>
    <string name="action_buypro">Buy topanimestream pro</string>
    <string name="action_rate">Rate the app</string>
    <string name="action_share">Share</string>
    <string name="action_show_as_list">Show as list</string>
    <string name="action_show_as_grid">Show as grid</string>
    <string name="title_search_widget">Search</string>
    <string name="no_connection">No connection</string>
    <string name="no_result">No result found</string>
    <string name="no_episodes">No episode in this tab</string>
    <string name="title_activity_anime_search">AnimeSearchActivity</string>
    <string name="no_favorite">You don\'t have any favorite</string>
    <string name="empty_history">No Watchlist found...</string>
    <string name="remove_favorite">Remove from favorites</string>
    <string name="back_again">Press back again to exit</string>
    <string name="cancel">Cancel</string>
    <string name="episode">Episode</string>
    <string name="title_alert_languages">Choose your preferred language</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_watchlist">My List</string>
    <string name="title_providers">Providers</string>
    <string name="loading_anime_list">Loading anime list...</string>
    <string name="loading_episode_list">Loading episode list...</string>
    <string name="loading_video">Loading video...</string>
    <string name="tab_all">All</string>
    <string name="tab_serie">Serie</string>
    <string name="tab_movie">Movie</string>
    <string name="tab_cartoon">Cartoon</string>
    <string name="tab_dubbed">Dubbed</string>
    <string name="tab_subbed">Subbed</string>
    <string name="toast_add_favorite">Added to favorites</string>
    <string name="toast_remove_favorite">Removed from favorites</string>
    <string name="error_loading_animes">An error has occurred while loading the animes</string>
    <string name="error_loading_video">An error has occurred while loading the video</string>
    <string name="error_loading_sources">An error has occurred while loading the sources</string>
    <string name="error_loading_episodes">An error has occurred while loading the episodes</string>
    <string name="error_loading_mirrors">An error has occurred while loading the mirrors</string>
    <string name="error_loading_providers">An error has occurred while loading the providers</string>
    <string name="menu_myprofile">My profile</string>
    <string name="menu_favorites">Favorites</string>
    <string name="menu_mylist">My List</string>
    <string name="menu_share">Share</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_pro">Upgrade to pro</string>
    <string name="menu_logout">Logout</string>
    <string name="language_english">English</string>
    <string name="language_french">Français</string>
    <string name="language_spanish">Español</string>
    <string name="episodes_of">Episodes of</string>
    <string name="error_loading_episode_details">Error loading episode details</string>
    <string name="loading_anime_details">Loading anime details</string>
    <string name="error_loading_anime_details">Error loading anime details</string>
    <string-array name="menu_drawer_full">
        
        <item>Favorites</item>
        <item>Watchlist</item>
        <item>Share</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>
    <string name="no_provider">No provider in this tab</string>
    <string name="play_phone">Play on device</string>
    <string name="stream_chromecast">Stream on Chromecast</string>
    <string name="choose_option">Choose an option</string>
    <string name="parenthese_default">(default)</string>
    <string name="choose_quality">Choose your quality</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="invalid_username_password">Invalid username or password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="error_username_empty">Username is empty</string>
    <string name="error_password_empty">Password is empty</string>
    <string name="error_login">Error, cannot log in</string>
    <string name="logging">Logging in...</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="logging_out">Logging out...</string>
    <string name="error_logout">Error, unable to logout</string>
    <string name="login_successful">Login successful</string>
    <string name="enjoy_using">"If you enjoy using "</string>
    <string name="take_a_moment_to_rate">, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_topanimestream">Rate Topanimestream</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="no_thanks">No, thanks</string>
    <string name="no_anime">No anime in this tab</string>
    <string name="not_available">Not available</string>
    <string name="download_full_version">You can\'t change the language of the animes in this version. Please download the full version on www.topanimestream.com to get access to all languages (English, Français, Español)</string>
    <string name="goto_topanimestream">Go to topanimestream.com</string>
    <string name="title_connect_chromecast">Connect to a chromecast device</string>
    <string name="message_connect_chromecast">You have to connect to a chromecast device prior to cast the video</string>
    <string name="play">Play</string>
    <string name="try_again">Try again</string>
    <string name="network_settings">Network settings</string>
    <string name="update_now">Update now</string>
    <string name="new_version_available">A new version of Topanimestream is available. Update to get all the new features and fixes!</string>
    <string name="title_update">Update</string>
    <string name="new_version_downloading">A New version of Topanimestream is downloading...</string>
    <string name="title_topanimestream_update">Topanimestream update</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="changes">Changes</string>
    <string name="title_auto_check_updates">Auto check for updates</string>
    <string name="check_update_everytime_app_launched">Check for updates everytime the app is launched</string>
    <string name="title_language">Language</string>
    <string name="checking_for_updates">Checking for updates...</string>
    <string name="welcome_topanimestream">Welcome to Topanimestream!</string>
    <string name="welcome_dialog_message">The google play version of Topanimestream is only available in Spanish, but what if you don\'t like watching animes in Spanish? Well, Topanimestream has a full version with which you can watch your animes in French, English and Spanish! Interrested?</string>
    <string name="get_full_version">Get the full version!</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_check_updates">Check for updates</string>
    <string name="manually_check_updates">Manually check for updates</string>
    <string name="loading_search">Searching...</string>
    <string name="title_topanimestream_upgraded">Topanimestream upgraded to pro</string>
<string name="topanimestream_upgraded_message">You have now  Topanimestream Pro. The app is now ad-free* and you have now access to Google Chromecast.
*Some providers may show ads in the video.</string>
    <string name="need_pro_chromecast">You need the pro version of Topanimestream to play the video on a Chromecast device.</string>
    <string name="pro_version_needed">Pro version needed</string>
    <string name="buy_full_version">Buy full version</string>
    <string name="loading_favorites">Loading favorites...</string>
    <string name="error_loading_favorites">An error has occurred while loading the favorites.</string>
    <string name="deleting_from_favorites">Deleting from favorite...</string>
    <string name="error_remove_favorite">An error has occurred while removing the favorite</string>
    <string name="error_adding_anime">An error has occurred while adding the anime</string>
    <string name="adding_to_favorites">Adding to favorites...</string>
    <string name="only_240p_available">This source has only 240p available.</string>
    <string name="title_buy_topanimestream">Buy Topanimestream pro</string>
    <string name="topanimestream_has_2_pro">Topanimestream has 2 pro versions available. The first one (downloadable on Google Play) is in Spanish only with no ads and Chromecast support. The other one let you watch animes in English, French and Spanish and also have no ads and Chromecast support. Which one do you prefer?</string>
    <string name="all_languages">All languages</string>
    <string name="spanish_only">Spanish only</string>
    <string name="bored_animes_spanish">Bored of animes in Spanish only? Buy the full version of Topanimestream to get access to animes in English, French and Spanish!</string>
    <string name="title_service_unavailable">Service unavailable</string>
    <string name="service_unavailable">The services of Topanimestream are currently unavailable. We will be back shortly.</string>
    <string name="action">Action</string>
    <string name="adventure">Adventure</string>
    <string name="animation">Animation</string>
    <string name="children">Children</string>
    <string name="comedy">Comedy</string>
    <string name="crime">Crime</string>
    <string name="documentary">Documentary</string>
    <string name="drama">Drama</string>
    <string name="erotica">Erotica</string>
    <string name="family">Family</string>
    <string name="fantasy">Fantasy</string>
    <string name="gameshow">Game show</string>
    <string name="homeandgarden">Home and garden</string>
    <string name="horror">Horror</string>
    <string name="magic">Magic</string>
    <string name="miniSeries">Mini series</string>
    <string name="music">Music</string>
    <string name="mystery">Mystery</string>
    <string name="news">News</string>
    <string name="reality">Reality</string>
    <string name="romance">Romance</string>
    <string name="sciencefiction">Science fiction</string>
    <string name="sliceoflife">Slice of Life</string>
    <string name="soap">Soap</string>
    <string name="specialInterest">Special interest</string>
    <string name="current_anime_rating">Current anime rating</string>
    <string name="your_rating">Your rating</string>
    <string name="save">Save</string>
    <string name="remove_your_vote">Remove your vote</string>
    <string name="subtitles">Subtitles</string>
    <string name="languages">Languages</string>
    <string name="qualities">Qualities</string>
</resources>