<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
 
    <PreferenceCategory android:title="Misc" android:key="prefCategoryMisc">
        <ListPreference
            android:key="prefLanguage"
            android:defaultValue="1"
            android:entries="@array/languages"
            android:summary="English"
            android:entryValues="@array/languagesValues"
            android:title="@string/title_language" />

        <CheckBoxPreference
            android:title="@string/title_auto_check_updates"
            android:defaultValue="true"
            android:summary="@string/check_update_everytime_app_launched"
            android:disableDependentsState="true"
            android:key="prefAutoCheckUpdates" />

        <Preference
            android:title="@string/title_check_updates"
            android:summary="@string/manually_check_updates"
            android:key="prefManuallyCheckUpdates"
            android:dependency="prefAutoCheckUpdates"/>
    </PreferenceCategory>

 
</PreferenceScreen>

