<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.topanimestream.views.MainActivity" >
	  <item 
      	android:id="@+id/menuSubtitles"
        android:title="@string/subtitles"
        android:icon="@drawable/ic_subtitles"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuLanguage"
        android:title="@string/title_language"
        android:icon="@drawable/ic_language"
        android:visible="false"
        app:showAsAction="always"/>

    <item
        android:id="@+id/menuSettings"
        android:title="@string/menu_settings"
        android:icon="@drawable/ic_settings"
        android:visible="false"
        app:showAsAction="always"/>

</menu>
