<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.topanimestream.MainActivity" >
    
     <item android:id="@+id/action_buypro"
       android:orderInCategory="100"
       android:title="@string/action_buypro"
       app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        app:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_sortaz"
        android:title="Sort a-z"
        android:icon="@drawable/ic_action_sortaz"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_sortza"
        android:title="Sort z-a"
        android:icon="@drawable/ic_action_sortza"
        app:showAsAction="always" />
    <item
        android:id="@+id/media_route_menu_item"
        android:title="@string/media_route_menu_title"
        app:actionProviderClass="android.support.v7.app.MediaRouteActionProvider"
        app:showAsAction="always"/>

	  <item 
      	android:id="@+id/search_widget"
        android:title="@string/title_search_widget"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

</menu>
