<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.topanimestream.LoginActivity">
    <ImageView
        android:id="@+id/imgBackdrop"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#db000000"/>
    <LinearLayout
        android:id="@+id/layContent"
        android:layout_centerVertical="true"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/txtUsername"
            style="@style/SignInEditText"
            android:layout_marginBottom="15dp"
            android:maxLength="30"
            android:hint="@string/username"/>
        <EditText
            android:id="@+id/txtPassword"
            style="@style/SignInEditText"
            android:inputType ="textPassword"
            android:password="true"
            android:layout_marginBottom="15dp"
            android:maxLength="30"
            android:hint="@string/password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/button_blue"
                android:textColor="#ffffff"
                android:id="@+id/btnLogin"
                android:text="@string/login" />

            <Button
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:background="@drawable/button_green"
                android:id="@+id/btnRegister"
                android:text="@string/register"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lblError"
            android:visibility="gone"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_above="@id/layContent"
        android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:textColor="#f5f5f5"
                android:textSize="50sp"
                android:text="@string/app_name_login"/>
    </RelativeLayout>

</RelativeLayout>
