<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.topanimestream.LoginActivity">
    <VideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/videoView"/>

    <TextView
        android:id="@+id/txtTitle"
        android:background="#80222222"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:textColor="#f5f5f5"
        android:textSize="50sp"
        android:text="@string/app_name_login"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:background="@drawable/button_blue"
            android:textColor="#ffffff"
            android:id="@+id/btnLogin"
            android:text="@string/login" />

        <Button
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:background="@drawable/button_green"
            android:id="@+id/btnRegister"
            android:text="@string/register"/>
    </LinearLayout>
</RelativeLayout>