<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.topanimestream.LoginActivity">
    <ImageView
        android:id="@+id/imgBackdrop"
        android:layout_width="match_parent"
        android:src="@drawable/attackontitanbackdrop"
        android:scaleType="centerCrop"
        android:layout_height="match_parent"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A0000000"/>
    <LinearLayout
        android:id="@+id/layContent"
        android:layout_centerVertical="true"
        android:padding="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/txtUsername"
                style="@style/SignInEditText"
                android:layout_marginBottom="15dp"
                android:maxLength="30"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/txtPassword"
                style="@style/SignInEditText"
                android:inputType ="textPassword"
                android:password="true"
                android:layout_marginBottom="15dp"
                android:maxLength="30"
                android:hint="@string/password"/>
        </LinearLayout>

        <TextView
            android:id="@+id/lblError"
            android:visibility="gone"
            android:textColor="#ff0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_above="@id/layContent"
        android:layout_height="match_parent">
            <TextView
                android:id="@+id/txtTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center_horizontal"
                android:textColor="#f5f5f5"
                android:textSize="50sp"
                android:text="@string/app_name_login"/>
    </RelativeLayout>

</RelativeLayout>
